--- a/aboutme.html
+++ b/aboutme.html
@@ -204,7 +204,7 @@
                         <img class="avatar" src="img/me1.jpeg" style="height: 20vh; width: 20vh;">
                     </a>
                     <h2>Hi, I'm Timothy Craig Lefkowitz</h2>
-                    <a style="color:#737373;" >programmer / 3d artist / photographer</a><p></p>
+                    <a style="color:#737373;" > Programmer / 3d artist / Photographer / Synth Builder / AutoCross</a><p></p>
                     <a style="color:#f2511b;" href="https://docs.google.com/document/d/140qW3EW1QqKMFJNFM6-Gg_5R8FnCEOPk57uvXKiRM3E/edit?usp=sharing"> Resume / CV </a>
                     <p></p>
 
@@ -215,10 +215,14 @@
 
 
                         <p></p>
-                    <a>Creating and building is what I love to do. The locals know me as a photographer but when I'm not out with a camera, I'm in my studio working on computer sciences or experimenting with Music.</a>
-                            <p>life is balance</p>
-                    <p>My work enviorment is on Macintosh, I love Java and Springboot. I enjoy three dimentional modeling and pizza</p>
-                </div>
+                            <p>
+                                I'm a creator at heart—whether it's behind the lens, inside a code editor, or building a custom synthesizers. The locals know me as a photographer, but when I’m not out capturing life through my camera, I’m deep in the studio blending technology, sound, and creativity.<p></p>
+
+Professionally, I’ve spent the past three years working on software systems for Medicare and the U.S. Postal Service, where I honed my skills in Java, API's, like Kafka. More recently, I’ve been diving into Rust and React. <p></p>
+
+I’m also passionate about 3D modeling, analog electronics, and making music—especially through the modular synths I build and experiment with. Life is balance, and for me, that means equal parts art, code, and the slice of pizza.
+                            </p>
+                    </div>
 
 <!--                <style>-->
 <!--                    @mixin neon-border($color,)-->
