--- a/aboutme.html
+++ b/aboutme.html
@@ -205,7 +205,7 @@
                     </a>
                     <h2>Hi, I'm Timothy Craig Lefkowitz</h2>
                     <a style="color:#737373;" > Programmer / 3d artist / Photographer / Synth Builder / AutoCross</a><p></p>
-                    <a style="color:#f2511b;" href="https://docs.google.com/document/d/140qW3EW1QqKMFJNFM6-Gg_5R8FnCEOPk57uvXKiRM3E/edit?usp=sharing"> Resume / CV </a>
+                    <a style="color:#f2511b;" href="https://docs.google.com/document/d/e/2PACX-1vR3YH3o_od408tXz28bB_H-KidlFqcvd5bO8nM9RjVyYbQN4HW-kmva5-Q4QPBgdlwCNtZvIo6aMrRe/pub"> Resume / CV </a>
                     <p></p>
 
                     <div class="card">
