--- a/home.html
+++ b/home.html
@@ -377,127 +377,15 @@
                                         <a href="javascript:;" class="avatar rounded-circle">
                                             <img class="avatar" src="https://live.staticflickr.com/65535/51372494246_27f10fbeec_o.gif" style="height: 20vh; width: 20vh;">
                                         </a>
-                                        <h1>Timothy Lefkowitz</h1>
-                                        <a style="color:#737373;"> developer / artist  </a><p></p>
+                                        <h1>Hi, I'm Tim</h1>
+                                        <a style="color:#737373;"> programmer / artist  </a><p></p>
                                     </div>
-
-
-
-
-<!--                                    <div>-->
-<!--                                        <ul class="cards">-->
-<!--                                            <li class="cards__item">-->
-<!--                                                <div class="card" style="max-width:40%">-->
-<!--                                                    <div class="card__image card__image&#45;&#45;river"></div>-->
-<!--                                                    <div class="card__content" style="display: flex; justify-content: center; align-content: center;align-items: center; ">-->
-<!--                                                        <div class="card__title"><b>Photonlabs - Social Media Platform</b></div><img src="img/someCode.jpeg" style="max-width:80%">-->
-<!--                                                        <p class="card__text">Photonlabs is a Social Media Platform made for my capstone project for Codeup.-->
-<!--                                                            This application includes Users, Friends and Groups. Users can create post, groups and edit their profile.</p>-->
-<!--                                                        <a href="https://github.com/timlefkowitz/photonlabs" class="btn btn&#45;&#45;block card__btn">code</a>-->
-<!--                                                    </div>-->
-<!--                                                </div>-->
-<!--                                            </li>-->
-<!--                                            <li class="cards__item">-->
-<!--                                                <div class="card">-->
-<!--                                                    <div class="card__image card__image&#45;&#45;river"></div>-->
-<!--                                                    <div class="card__content">-->
-<!--                                                        <div class="card__title"><b>Photonlabs - Calculator</b></div>-->
-<!--                                                        <p class="card__text">A Simple Calculator Built with Javascript, CSS and HTML</p>-->
-<!--                                                        <a class="btn btn&#45;&#45;block card__btn" href="calc.html">Calculate</a>-->
-<!--                                                    </div>-->
-<!--                                                </div>-->
-<!--                                            </li>-->
-<!--                                            <li class="cards__item">-->
-<!--                                                <div class="card" style="width:100%">-->
-<!--                                                    <div class="card__image card__image&#45;&#45;river"></div>-->
-<!--                                                    <div class="card__content">-->
-<!--                                                        <div class="card__title"><b>My Weather Map</b></div>-->
-<!--                                                        <p class="card__text">Using Mapbox API we brought in the weather for 3 days! today tomorrow and next!</p>-->
-<!--                                                        <a class="btn btn&#45;&#45;block card__btn" href="weathermap.html">Weather Map</a>-->
-<!--                                                    </div>-->
-<!--                                                </div>-->
-<!--                                                <div class="card">-->
-<!--                                                    <div class="card__image card__image&#45;&#45;river"></div>-->
-<!--                                                    <div class="card__content">-->
-<!--                                                        <div class="card__title"><b>Photographic Archive</b></div>-->
-<!--                                                        <p class="card__text">a camera has been with me for most of my life, here is the Archive of my work</p>-->
-<!--                                                        <a class="btn btn&#45;&#45;block card__btn" href="flickarchive.html">photographic archive</a>-->
-<!--                                                    </div>-->
-<!--                                                </div>-->
-<!--                                                <div class="card">-->
-<!--                                                    <div class="card__image card__image&#45;&#45;river"></div>-->
-<!--                                                    <div class="card__content">-->
-<!--                                                        <div class="card__title"><b>Game and Environmental</b></div>-->
-<!--                                                        <p class="card__text">Game design is one of my favorite past times. I can't go too long without jumping in and working on design</p>-->
-<!--                                                        <a class="btn btn&#45;&#45;block card__btn" href="3d.html">3D worlds</a>-->
-<!--                                                    </div>-->
-<!--                                                </div>-->
-<!--                                            </li>-->
-<!--                                        </ul>-->
-<!--                                 </div>-->
-
-
                                  </div>
                             </div>
                         </div>
                     </div>
-
-
-
-
-                    <!--              <a>I'm always working on some complicated things, Some of my ideas include: encrypting every post, giving it a key and letting that key only exist once. A new post then becomes a token </a>-->
-                    <!--              <p>You could export your token to a usb or maybe even etherum or dogecoin!! this is the idea. For now I'm happy learning how database structors work and how to grab the data i want.</p>-->
-
-                    <!--              <p>Thank you for reading, and viewing my very proud project! Thank you to Codeup and Thank you to my family <3</p>-->
-
-
-
-                    <!--            <div>-->
-                    <!--              <a style="font-size: 12px">username</a></s>-->
-                    <!--              <h6 style="align-items: center" th:text="${user.username}"></h6>-->
-
-
-                    <!--&lt;!&ndash;              Status &ndash;&gt;-->
-                    <!--        <div>-->
-                    <!--          <a style="font-size: 12px">status</a>-->
-                    <!--            <h4 style="align-items: center" th:text="${user.status}"></h4>-->
-                    <!--        </div>-->
-
-                    <!--&lt;!&ndash;              Friends &ndash;&gt;-->
-
-
-
-                    <!--&lt;!&ndash;              Featured Post  &ndash;&gt;-->
-                    <!--        <div>-->
-                    <!--          <a style="font-size: 12px">featuredPost</a>-->
-                    <!--&lt;!&ndash;          <img th:src="${usersPost.imgPath}" style="width: 85vh;">&ndash;&gt;-->
-                    <!--&lt;!&ndash;          <h4 style="align-items: center" th:text="${usersPost.title}"></h4>&ndash;&gt;-->
-                    <!--&lt;!&ndash;          <p style="align-items: center" th:text="${usersPost.body}"></p>&ndash;&gt;-->
-
-                    <!--          </div>-->
-
-                    <!--        </div>-->
-
-
-                    <!--&lt;!&ndash; Latest compiled and minified CSS &ndash;&gt;-->
-                    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">-->
-
-                    <!--&lt;!&ndash; jQuery library &ndash;&gt;-->
-                    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>-->
-
-
                 </section>
-<!--            </div>-->
-<!--            <div class="col">-->
-<!--                <div class="card">-->
-<!--                    <div class="card__image card__image&#45;&#45;river"></div>-->
-<!--                    <div class="card__content">-->
-<!--                        <div class="card__title"><b>Game and Environmental</b></div>-->
-<!--                        <p class="card__text">Game design is one of my favorite past times. I can't go too long without jumping in and working on design</p>-->
-<!--                        <a class="btn btn&#45;&#45;block card__btn" href="3d.html">3D worlds</a>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
+
         </div>
     </div>
 
@@ -513,7 +401,8 @@
     <div class="p-4 p-md-5 mb-4 text-white rounded bg-dark">
         <div class="col-md-6 px-0">
             <h1 class="display-4 fst-italic">PhotonLabs</h1>
-            <p class="lead my-3">a computer science journal </p>
+            <p class="lead my-3"> This is my computer sci / Art journal :D </p>
+            <p>  </p>
 <!--            <p class="lead mb-0"><a href="#" class="text-white fw-bold">Continue reading...</a></p>-->
         </div>
     </div>
