--- a/home.html
+++ b/home.html
@@ -400,7 +400,7 @@
 <main class="container">
     <div class="p-4 p-md-5 mb-4 text-white rounded bg-dark">
         <div class="col-md-6 px-0">
-            <h1 class="display-4 fst-italic">PhotonLabs</h1>
+            <h1 class="display-4 fst-italic">Software should serve people, not control them. I build tools that empower, not exploit.</h1>
             <p class="lead my-3"> This is my computer sci / Art journal :D </p>
             <p>  </p>
 <!--            <p class="lead mb-0"><a href="#" class="text-white fw-bold">Continue reading...</a></p>-->
