--- a/home.html
+++ b/home.html
@@ -388,15 +388,10 @@
 
         </div>
     </div>
-
-
 </main>
 
 
 <body>
-
-
-
 <main class="container">
     <div class="p-4 p-md-5 mb-4 text-white rounded bg-dark">
         <div class="col-md-6 px-0">
@@ -407,6 +402,8 @@
         </div>
     </div>
 
+
+        <a style="color:#737373;"> projects  </a><p></p>
     <div class="row mb-2">
         <div class="col-md-6">
             <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
