--- a/home.html
+++ b/home.html
@@ -403,7 +403,25 @@
     </div>
 
 
-        <a style="color:#737373;"> projects  </a><p></p>
+
+<div class="row postingDiv" style="display: flex; justify-content: center; align-items: center; text-align: center">
+                                <div id="profileItems" style="margin-top:10vh">
+
+
+
+
+                                    <!--          Avatar and Add to Contacts Buttons-->
+                                    <div style="margin-bottom:1.8vh">
+                                        <a href="javascript:;" class="avatar rounded-circle">
+                                            <img class="avatar" src="https://live.staticflickr.com/65535/51372494246_27f10fbeec_o.gif" style="height: 20vh; width: 20vh;">
+                                        </a>
+                                        <a style="color:#737373;"> projects  </a><p></p>
+                                    </div>
+                                 </div>
+                            </div>
+
+
+
     <div class="row mb-2">
         <div class="col-md-6">
             <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
