--- a/home.html
+++ b/home.html
@@ -423,6 +423,20 @@
         <div class="col-md-6">
             <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
 
+
+                                <div class="col p-4 d-flex flex-column position-static" style="background-color:rgba(89,89,89,0.3);">
+<!--                    <strong class="d-inline-block mb-2 text-primary">Social Media Project</strong>-->
+                    <h3 class="mb-0">Trainer's Corner - Pokemon TCG</h3>
+                    <div class="mb-1 text-muted">May 11th</div>
+                    <p class="card-text mb-auto">This platform was built Rust, React, Postseql. <br>
+                        We are making an all-in-one hub for collecting Pokemon cards.
+                        Snap a photo to instantly add cards to your portfolio. Grad
+                        cards with just a photo, connect with other collectors, 
+                        Follow your friends, keep up with their collections
+                    </p>
+                     <a href="https://github.com/timlefkowitz/photonlabs" class="stretched-link" style="color:white">Check out the code here</a>
+                </div>
+
                 <div class="col p-4 d-flex flex-column position-static" style="background-color:rgba(89,89,89,0.3);">
 <!--                    <strong class="d-inline-block mb-2 text-primary">Social Media Project</strong>-->
                     <h3 class="mb-0">Photons - A Social Media Platform </h3>
