--- a/home.html
+++ b/home.html
@@ -424,7 +424,39 @@
             <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
 
 
+
                                 <div class="col p-4 d-flex flex-column position-static" style="background-color:rgba(89,89,89,0.3);">
+<!--                    <strong class="d-inline-block mb-2 text-primary">Social Media Project</strong>-->
+                    <h3 class="mb-0">United States Postal Service</h3>
+                    <div class="mb-1 text-muted">March 2022</div>
+                    <p class="card-text mb-auto">
+                        Developer on a team to analyze, design, and build a system built on multiple components
+                         of application code on a microservices architecture project with Java, Kafka, Akka, 
+                         Redis, OpenShift, Docker in an Agile setting. Work with functional support to
+                         investigate and resolve defect skills: AWS, Go, Python, OpenShift, Kubernetes, 
+                         Jenkins.
+                    </p>
+                     <a href="https://github.com/timlefkowitz/Trainer-s-Corner" class="stretched-link" style="color:white">Check out the code here</a>
+                </div>
+
+
+                                <div class="col p-4 d-flex flex-column position-static" style="background-color:rgba(89,89,89,0.3);">
+<!--                    <strong class="d-inline-block mb-2 text-primary">Social Media Project</strong>-->
+                    <h3 class="mb-0">Medicare & Medicaid Services </h3>
+                    <div class="mb-1 text-muted">October 2023</div>
+                    <p class="card-text mb-auto">
+                        Develop and customize software solutions to meet client needs, 
+                        including conversions, interfaces, enhancements, and UI modifications.
+                         Handle full-cycle development from analysis to deployment and 
+                         maintenance. Apply expertise in technologies, processes, and tools
+                          to support projects. Proficient in Scala and RESTful APIs, 
+                          with strong organizational skills and attention to detail.	
+                    </p>
+                     <a href="https://github.com/timlefkowitz/Trainer-s-Corner" class="stretched-link" style="color:white">Check out the code here</a>
+                </div>
+
+
+                <div class="col p-4 d-flex flex-column position-static" style="background-color:rgba(89,89,89,0.3);">
 <!--                    <strong class="d-inline-block mb-2 text-primary">Social Media Project</strong>-->
                     <h3 class="mb-0">Trainer's Corner - Pokemon TCG</h3>
                     <div class="mb-1 text-muted">May 11th</div>
@@ -434,7 +466,20 @@
                         cards with just a photo, connect with other collectors, 
                         Follow your friends, keep up with their collections
                     </p>
-                     <a href="https://github.com/timlefkowitz/photonlabs" class="stretched-link" style="color:white">Check out the code here</a>
+                     <a href="https://github.com/timlefkowitz/Trainer-s-Corner" class="stretched-link" style="color:white">Check out the code here</a>
+                </div>
+
+                                <div class="col p-4 d-flex flex-column position-static" style="background-color:rgba(89,89,89,0.3);">
+<!--                    <strong class="d-inline-block mb-2 text-primary">Social Media Project</strong>-->
+                    <h3 class="mb-0">Provence</h3>
+                    <div class="mb-1 text-muted">May 11th</div>
+                    <p class="card-text mb-auto">This platform was built Rust, React, Postseql. <br>
+                        We are making an all-in-one hub for collecting Pokemon cards.
+                        Snap a photo to instantly add cards to your portfolio. Grad
+                        cards with just a photo, connect with other collectors, 
+                        Follow your friends, keep up with their collections
+                    </p>
+                     <a href="https://github.com/timlefkowitz/Trainer-s-Corner" class="stretched-link" style="color:white">Check out the code here</a>
                 </div>
 
                 <div class="col p-4 d-flex flex-column position-static" style="background-color:rgba(89,89,89,0.3);">
