--- a/home.html
+++ b/home.html
@@ -420,7 +420,7 @@
 
 
     <div class="row mb-2">
-        <div class="col-md-6">
+        <div class="col-md-6"><p> Accenture </p>
             <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
 
 
@@ -436,8 +436,7 @@
                          investigate and resolve defect skills: AWS, Go, Python, OpenShift, Kubernetes, 
                          Jenkins.
                     </p>
-                     <a href="https://github.com/timlefkowitz/Trainer-s-Corner" class="stretched-link" style="color:white">Check out the code here</a>
-                </div>
+              </div>
 
 
                                 <div class="col p-4 d-flex flex-column position-static" style="background-color:rgba(89,89,89,0.3);">
@@ -452,8 +451,7 @@
                           to support projects. Proficient in Scala and RESTful APIs, 
                           with strong organizational skills and attention to detail.	
                     </p>
-                     <a href="https://github.com/timlefkowitz/Trainer-s-Corner" class="stretched-link" style="color:white">Check out the code here</a>
-                </div>
+ </div>
 
 
                 <div class="col p-4 d-flex flex-column position-static" style="background-color:rgba(89,89,89,0.3);">
