--- a/home.html
+++ b/home.html
@@ -420,12 +420,11 @@
 
 
     <div class="row mb-2">
-        <div class="col-md-6"><p> Accenture </p>
+        <div class="col-md-6">
             <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                <p> Accenture </p>
 
-
-
-                                <div class="col p-4 d-flex flex-column position-static" style="background-color:rgba(89,89,89,0.3);">
+             <div class="col p-4 d-flex flex-column position-static" style="background-color:rgba(89,89,89,0.3);">
 <!--                    <strong class="d-inline-block mb-2 text-primary">Social Media Project</strong>-->
                     <h3 class="mb-0">United States Postal Service</h3>
                     <div class="mb-1 text-muted">March 2022</div>
