--- a/home.html
+++ b/home.html
@@ -422,7 +422,6 @@
     <div class="row mb-2">
         <div class="col-md-6">
             <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-                <p> Accenture </p>
 
              <div class="col p-4 d-flex flex-column position-static" style="background-color:rgba(89,89,89,0.3);">
 <!--                    <strong class="d-inline-block mb-2 text-primary">Social Media Project</strong>-->
@@ -435,6 +434,7 @@
                          investigate and resolve defect skills: AWS, Go, Python, OpenShift, Kubernetes, 
                          Jenkins.
                     </p>
+              </div>
               </div>
 
 
