--- a/home.html
+++ b/home.html
@@ -412,7 +412,7 @@
 
                                     <!--          Avatar and Add to Contacts Buttons-->
                                     <div style="margin-bottom:1.8vh">
-                                        <a style="color:#737373;"> projects  </a><p></p>
+                                        <a style="color:#737373;"> professional experiance  </a><p></p>
                                     </div>
                                  </div>
                             </div>
@@ -451,7 +451,13 @@
                           with strong organizational skills and attention to detail.	
                     </p>
  </div>
+ </div>
 
+                                        <div style="margin-bottom:1.8vh">
+                                        <a style="color:#737373;"> projects  </a><p></p>
+                                    </div>
+                                 </div>
+                            </div>
 
                 <div class="col p-4 d-flex flex-column position-static" style="background-color:rgba(89,89,89,0.3);">
 <!--                    <strong class="d-inline-block mb-2 text-primary">Social Media Project</strong>-->
@@ -465,6 +471,7 @@
                     </p>
                      <a href="https://github.com/timlefkowitz/Trainer-s-Corner" class="stretched-link" style="color:white">Check out the code here</a>
                 </div>
+            </div>
 
                                 <div class="col p-4 d-flex flex-column position-static" style="background-color:rgba(89,89,89,0.3);">
 <!--                    <strong class="d-inline-block mb-2 text-primary">Social Media Project</strong>-->
@@ -478,6 +485,7 @@
                     </p>
                      <a href="https://github.com/timlefkowitz/Trainer-s-Corner" class="stretched-link" style="color:white">Check out the code here</a>
                 </div>
+            </div>
 
                 <div class="col p-4 d-flex flex-column position-static" style="background-color:rgba(89,89,89,0.3);">
 <!--                    <strong class="d-inline-block mb-2 text-primary">Social Media Project</strong>-->
