--- a/home.html
+++ b/home.html
@@ -404,18 +404,15 @@
 
 
 
-<div class="row postingDiv" style="display: flex; justify-content: center; align-items: center; text-align: center">
+    <div class="row postingDiv" style="display: flex; justify-content: center; align-items: center; text-align: center">
                                 <div id="profileItems" style="margin-top:10vh">
-
-
-
 
                                     <!--          Avatar and Add to Contacts Buttons-->
                                     <div style="margin-bottom:1.8vh">
                                         <a style="color:#737373;"> professional experiance  </a><p></p>
                                     </div>
                                  </div>
-                            </div>
+    </div>
 
 
 
@@ -453,11 +450,17 @@
  </div>
  </div>
 
-                                        <div style="margin-bottom:1.8vh">
-                                        <a style="color:#737373;"> projects  </a><p></p>
+
+
+                <div class="row postingDiv" style="display: flex; justify-content: center; align-items: center; text-align: center">
+                                <div id="profileItems" style="margin-top:10vh">
+
+                                    <!--          Avatar and Add to Contacts Buttons-->
+                                    <div style="margin-bottom:1.8vh">
+                                        <a style="color:#737373;"> professional experiance  </a><p></p>
                                     </div>
                                  </div>
-                            </div>
+                </div>
 
                 <div class="col p-4 d-flex flex-column position-static" style="background-color:rgba(89,89,89,0.3);">
 <!--                    <strong class="d-inline-block mb-2 text-primary">Social Media Project</strong>-->
