--- a/home.html
+++ b/home.html
@@ -414,30 +414,25 @@
                                  </div>
     </div>
 
-
-
-    <div class="row mb-2">
-        <div class="col-md-6">
-            <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-
-             <div class="col p-4 d-flex flex-column position-static" style="background-color:rgba(89,89,89,0.3);">
+                <div class="col p-4 d-flex flex-column position-static" style="background-color:rgba(89,89,89,0.3);">
 <!--                    <strong class="d-inline-block mb-2 text-primary">Social Media Project</strong>-->
                     <h3 class="mb-0">United States Postal Service</h3>
                     <div class="mb-1 text-muted">March 2022</div>
                     <p class="card-text mb-auto">
-                        Developer on a team to analyze, design, and build a system built on multiple components
+                                       Developer on a team to analyze, design, and build a system built on multiple components
                          of application code on a microservices architecture project with Java, Kafka, Akka, 
                          Redis, OpenShift, Docker in an Agile setting. Work with functional support to
                          investigate and resolve defect skills: AWS, Go, Python, OpenShift, Kubernetes, 
                          Jenkins.
                     </p>
-              </div>
+                     <a href="https://github.com/timlefkowitz/Trainer-s-Corner" class="stretched-link" style="color:white">Check out the code here</a>
+                </div>
             </div>
 
 
-                                <div class="col p-4 d-flex flex-column position-static" style="background-color:rgba(89,89,89,0.3);">
+            <div class="col p-4 d-flex flex-column position-static" style="background-color:rgba(89,89,89,0.3);">
 <!--                    <strong class="d-inline-block mb-2 text-primary">Social Media Project</strong>-->
-                    <h3 class="mb-0">Medicare & Medicaid Services </h3>
+                    <h3 class="mb-0">Medicare & Medicaid Services</h3>
                     <div class="mb-1 text-muted">October 2023</div>
                     <p class="card-text mb-auto">
                         Develop and customize software solutions to meet client needs, 
@@ -447,10 +442,14 @@
                           to support projects. Proficient in Scala and RESTful APIs, 
                           with strong organizational skills and attention to detail.	
                     </p>
- </div>
- </div>
+                     <a href="https://github.com/timlefkowitz/Trainer-s-Corner" class="stretched-link" style="color:white">Check out the code here</a>
+                </div>
+            </div>
 
 
+ </div>
+
+                <!----     -->
 
                 <div class="row postingDiv" style="display: flex; justify-content: center; align-items: center; text-align: center">
                                 <div id="profileItems" style="margin-top:10vh">
@@ -462,6 +461,7 @@
                                  </div>
                 </div>
 
+                <!----     -->
                 <div class="col p-4 d-flex flex-column position-static" style="background-color:rgba(89,89,89,0.3);">
 <!--                    <strong class="d-inline-block mb-2 text-primary">Social Media Project</strong>-->
                     <h3 class="mb-0">Trainer's Corner - Pokemon TCG</h3>
