--- a/home.html
+++ b/home.html
@@ -472,6 +472,7 @@
                      <a href="https://github.com/timlefkowitz/Trainer-s-Corner" class="stretched-link" style="color:white">Check out the code here</a>
                 </div>
             </div>
+        </div>
             
 
                                 <div class="col p-4 d-flex flex-column position-static" style="background-color:rgba(89,89,89,0.3);">
