--- a/home.html
+++ b/home.html
@@ -445,6 +445,7 @@
                      <a href="https://github.com/timlefkowitz/Trainer-s-Corner" class="stretched-link" style="color:white">Check out the code here</a>
                 </div>
             </div>
+        </div>
 
                 <!----     -->
 
@@ -453,7 +454,7 @@
 
                                     <!--          Avatar and Add to Contacts Buttons-->
                                     <div style="margin-bottom:1.8vh">
-                                        <a style="color:#737373;"> professional experiance  </a><p></p>
+                                        <a style="color:#737373;"> personal projects  </a><p></p>
                                     </div>
                                  </div>
                 </div>
