--- a/home.html
+++ b/home.html
@@ -469,7 +469,19 @@
                     <a href="https://github.com/timlefkowitz/photonlabs" class="stretched-link" style="color:white">Check out the code here</a>
                 </div>
 
+                <!---    -->
 
+                    <div class="row postingDiv" style="display: flex; justify-content: center; align-items: center; text-align: center">
+                                <div id="profileItems" style="margin-top:10vh">
+
+                                    <!--          Avatar and Add to Contacts Buttons-->
+                                    <div style="margin-bottom:1.8vh">
+                                        <a style="color:#737373;"> Others  </a><p></p>
+                                    </div>
+                                 </div>
+    </div>
+
+                <!---    -->
 
         <div class="col-md-6">
             <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
