--- a/home.html
+++ b/home.html
@@ -286,7 +286,9 @@
                 <article class="blog-post">
                     <h2 class="blog-post-title">A Greek Column in Blender, Tips to Get You Started, and Why I Love Blender So Much</h2>
                     <p class="blog-post-meta">Sep 22, 2021 by <a href="blendertutorial.html">Read Here</a></p>
-                    <p>The Japanese Maneki-neko is a figurine often believed to bring good luck to the owner.</p>
+                    <p> Blender is the free and open source 3D creation suite. 
+                        It supports the entirety of the 3D pipeline—modeling, rigging, 
+                        animation, simulation, rendering,</p>
                     <hr>
                     <h2 class="blog-post-title">Fixing the Japanese Maneki-neko (MoneyCat)</h2>
                     <p class="blog-post-meta">Sep 18, 2021 by <a href="moneyCat.html">Read Here</a></p>
