--- a/home.html
+++ b/home.html
@@ -226,9 +226,9 @@
                 <h3 class="mb-0">Provence</h3>
                 <div class="mb-1 text-muted">May 11th</div>
                 <p class="card-text mb-auto">
-                    This platform was built with Rust, React, PostgreSQL. An all-in-one hub for collecting Pokemon cards. Snap a photo to instantly add cards to your portfolio, grade cards, connect with other collectors, and follow friends' collections.
+                    This is a platform for Artist to Archive their work on a blockchain, keep track of ownership and staticis of work. while 
+                    galleries can manage their Artist, Taking NFT to the pyshical world 
                 </p>
-                <a href="https://github.com/timlefkowitz/Trainer-s-Corner" class="text-white text-decoration-none">Check out the code here</a>
             </div>
         </div>
         <div class="row mb-4">
